# MuscleMass

./: CMakeLists.txt
matlab/: testInertia.m
resources/: input.json  input2.json
src/: Cloth.cpp  Cloth.h  Joint.cpp  Joint.h  JointSpaceInfo.cpp  JointSpaceInfo.h  JsonEigen.cpp  JsonEigen.h  MLAssembler.cpp  MLAssembler.h  MLBasisFunction.cpp  MLBasisFunction.h  MLBody.cpp  MLBody.h  MLCommon.cpp  MLCommon.h  MLComp.cpp  MLComp.h  MLCompCylinder.cpp  MLCompCylinder.h  MLCompSphere.cpp  MLCompSphere.h  MLConstraint.cpp  MLConstraint.h  MLConstraintJoint.cpp  MLConstraintJoint.h  MLContact.cpp  MLDerivInfo.cpp  MLDerivInfo.h  MLError.cpp  MLError.h  MLObject.cpp  MLObject.h  MLOneDimParametricFunction.cpp  MLOneDimParametricFunction.h  MLParametricShape.cpp  MLParametricShape.h  MLPoint.cpp  MLPoint.h  MLPrecomputedSample.cpp  (+42 more)
